# mavsdk_interface

./: CMakeLists.txt  README.md  package.xml
action/: fly.action
launch/: rtab_simulator.launch  simulator.launch
models/drone_simulator/: drone_simulator.urdf
msg/: battery.msg  gpsPos.msg  velocityNedPos.msg
src/: InformationDistributor.cpp  InformationDistributor.h  Interface.cpp  Interface.h  InterfaceClient.cpp  InterfaceClient.h  base_link_tf.cpp  flyClient.cpp  interface.cpp  mavsdkUtils.hpp
srv/: go.srv  stopOffboard.srv  takeoff.srv
